fix the style of muscles groupe page on mobile display

--- a/src/client/src/tsx/pages/Page.module.scss
+++ b/src/client/src/tsx/pages/Page.module.scss
@@ -11,7 +11,7 @@
     margin-bottom: 0.5rem;
 
     a {
-      @include button(rgb(114, 151, 224), 0.7rem, 1rem);
+      @include button(rgb(114, 151, 224), 0.7rem, 0.5rem);
       text-decoration: none;
       color: white;
       font-size: 1.2rem;
